# ted

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  nob.c  nob.cpp
examples/: abc1.txt  abc99.txt  kilo.c  toto.c
src/: main.cpp
src/platform/: term.hpp
src/platform/posix/: term.cpp
src/ted/: editor.cpp  editor.hpp  key.hpp  os.cpp  os.hpp  term.cpp  term.hpp  tui.cpp  tui.hpp  utils.hpp
src/ted/platform/posix/: os.cpp  term.cpp
